# bhante-vector-search

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  README.md  README_API.md  USAGE_GUIDE.md  components.json  docker-compose.yml  ingest_epub.py  ingest_seminars.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  quickstart.sh  requirements-api.txt  review_seminars.py  scrape_seminars.py  start_api.sh  start_dev.sh  svelte.config.js  test_system.py  vite.config.js
.github/workflows/: db-backup.yml  sync-content.yml
data/seminars/: REVIEW.md  consolidated.json  review_status.json
data/seminars/cleaned/: 151.json  SEM001.json  SEM002.json  SEM003.json  SEM004.json  SEM005.json  SEM006.json  SEM007.json  SEM008.json  SEM009.json  SEM010.json  SEM011.json  SEM012.json  SEM013.json  SEM014.json  SEM015.json  SEM016.json  SEM017.json  SEM018.json  SEM019.json  SEM020.json  SEM021.json  SEM022.json  SEM023.json  SEM024.json  SEM025.json  SEM026.json  SEM027.json  SEM028.json  SEM029.json  SEM030.json  SEM031.json  SEM032.json  SEM033.json  SEM034.json  SEM035.json  SEM036.json  SEM037.json  SEM038.json  SEM039.json  (+169 more)
data/seminars/raw/: 151.json  SEM001.json  SEM001C.json  SEM002.json  SEM002C.json  SEM003.json  SEM003C.json  SEM004.json  SEM004C.json  SEM005.json  SEM005C.json  SEM006.json  SEM006C.json  SEM007.json  SEM007C.json  SEM008.json  SEM008C.json  SEM009.json  SEM009C.json  (+302 more)
e2e/: auth.setup.ts  search.spec.ts  seminar-viewer.spec.ts
migrations/: 0000_meta.sql  0002_ingestion.sql  0003_user_features.sql  0004_pgvector.sql  0005_seminar_contents.sql  0006_seminars.sql  0007_seminar_transcripts.sql  0008_feedback.sql  0009_admin_role.sql  0010_system_events.sql  0011_two_factor.sql
scripts/: migrate_chroma_to_pgvector.py  seed_dev_user.ts  seed_from_files.py  seed_seminar_contents.ts  seed_seminars.ts
src/: app.css  app.d.ts  app.html  epub_processor.py  hooks.server.ts  seminar_processor.py  seminar_scraper.py
src/client/: .env.example  index.html  package-lock.json  package.json  vite.config.js
src/lib/: api.ts  auth.svelte.ts  auth.ts  searchController.svelte.ts  searchState.ts  storage.svelte.ts  supabase.ts  types.ts
src/routes/: +layout.svelte  bookmarks.remote.ts  feedback.remote.ts  saved-queries.remote.ts  search-history.remote.ts  search.remote.ts  seminars.remote.ts  works.remote.ts
src/server/: api.py  auth.py  pyproject.toml  server.py
src/server/database/: db_config.py
src/server/schema/: __init__.py  schema.py
(+109 files in other folders)
