[tool.poetry]
name = "bhante-vector-search"
version = "0.1.0"
description = "A tool to search Urgyen (Bhante) Sangharakshita's complete works"
authors = ["nemo <nemozak1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
